--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-    <link rel="stylesheet" href="styles.css">
-
-</head>
+    </head>
 <body>
     <header class="header">
         <div class="header-top container">
@@ -49,11 +47,9 @@
         <section class="admin-section container" id="adminSection" style="display: none;">
             <h2>Admin Panel</h2>
             <div id="netlifyIdentityWidget"></div>
-
             <form id="scheduleForm" class="schedule-form" style="margin-top: 2rem;">
                 <h3 id="formTitle" class="form-title">Tambah Jadwal Baru</h3>
                 <input type="hidden" id="scheduleId" name="scheduleId">
-
                 <div class="form-group">
                     <label for="formInstitusi">Institusi:</label>
                     <input type="text" id="formInstitusi" name="institusi" required>
@@ -86,7 +82,6 @@
         </div>
     </div>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
-
